# imaginarium

./: .gitignore  README.md  fix_file_and_folder_rights.txt  goto_prj.bash  imaginarium.launch  out.test  out2.test  out3.test  run_prj.bash
2017/: InputFilter.py  MapViewer.py  README.txt  SensorReader.py  antenne.py  autoThrust.py  data_sets.7z  imaginarium.py  main.py  main_v2.py  reboot_ESC1.py  reboot_ESC2.py  reboot_ESC3.py  reboot_ESC4.py  rot.py  test_gyro.py
project_emaginarium/: 10-emaginarium.rules  CAPT_MX_USB10.ino  CAPT_MX_USB10_LIDAR_082018.ino  LiDAR_final.ino  emaginarium.launch  make.bash  run.bash  settings.json
project_emobile/: 10-emobile.rules  run.bash  (+5 more)
src/common/hardware_monitor/: CMakeLists.txt  package.xml
src/common/hardware_monitor/launch/: mouse.launch
src/common/hardware_monitor/msg/: Mouse.msg  msg.msg
src/common/hardware_monitor/nodes/: mouse.py
src/common/hardware_monitor/src/: main.cpp
src/common/settings_store/: CMakeLists.txt  package.xml  setup.py
src/common/settings_store/include/: settings_store_client.hpp
src/common/settings_store/include/settings_store/: settings_store_client.h  settings_store_client.inl
src/common/settings_store/launch/: settings_store_server.launch
src/common/settings_store/msg/: Change.msg  change.msg
src/common/settings_store/nodes/: settings_store_server.py
src/common/settings_store/scripts/: settings_store_server.py
src/common/settings_store/src/: settings_store_client.cpp
src/common/settings_store/src/settings_store/: settings_store.py  settings_store_client.py
src/common/settings_store/srv/: declareandget.srv  delete.srv  getstates.srv  multiget.srv  set.srv  setstates.srv
(+284 files in other folders)
