<?xml version="1.0"?>
<package format="2">
	<name>hardware_monitor</name>
	<version>1.0.0</version>
	<description>The hardware_monitor package, this package will read hardware status (CPU/Memory/Network) and will send them on a topic</description>

	<maintainer email="bichette@pi.pi">bichette</maintainer>

	<license>GPLv3</license>

	<!--   <doc_depend>doxygen</doc_depend> -->
	<buildtool_depend>catkin</buildtool_depend>

	<depend>roscpp</depend>
	<depend>std_msgs</depend>
	<depend>settings_store</depend>

	<build_depend>message_generation</build_depend>
	
	<exec_depend>message_runtime</exec_depend>
	
	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->

	</export>
</package>
