<?xml version="1.0"?>
<package format="2">
  <name>settings_store</name>
  <version>1.0.0</version>
  <description>The settings_store package</description>

  <maintainer email="bichette@pi.pi">bichette</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  
  
  <build_depend>message_generation</build_depend>
 
  <exec_depend>message_runtime</exec_depend>
  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
	<cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -lsettings_store"/>
  </export>
  
</package>
